docs/apps/SQLConditionParser/SQLConditionParser.js
var SQLConditionParser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$otherExpectation("Condition clause"),
        peg$c1 = function(e) { return e; },
        peg$c2 = function(head, tail) {
              return { type: 'expr_list', value: createList(head, tail) };
            },
        peg$c3 = function(condition, result) {
            return {
              type: 'when',
              cond: condition,
              result: result
            };
          },
        peg$c4 = function(result) {
            return { type: 'else', result: result };
          },
        peg$c5 = function(head, tail) {
              return createBinaryExprChain(head, tail);
            },
        peg$c6 = "!",
        peg$c7 = peg$literalExpectation("!", false),
        peg$c8 = "=",
        peg$c9 = peg$literalExpectation("=", false),
        peg$c10 = function(expr) {
              return createUnaryExpr('NOT', expr);
            },
        peg$c11 = function(left, rh) {
              if (rh === null) return left;
              else if (rh.type === 'arithmetic') return createBinaryExprChain(left, rh.tail);
              else return createBinaryExpr(rh.op, left, rh.right);
            },
        peg$c12 = function(l) {
              return { type: 'arithmetic', tail: l };
            },
        peg$c13 = ">=",
        peg$c14 = peg$literalExpectation(">=", false),
        peg$c15 = ">",
        peg$c16 = peg$literalExpectation(">", false),
        peg$c17 = "<=",
        peg$c18 = peg$literalExpectation("<=", false),
        peg$c19 = "<>",
        peg$c20 = peg$literalExpectation("<>", false),
        peg$c21 = "<",
        peg$c22 = peg$literalExpectation("<", false),
        peg$c23 = "!=",
        peg$c24 = peg$literalExpectation("!=", false),
        peg$c25 = function(op, l) {
              return { op, right: l };
            },
        peg$c26 = function(op, begin, end) {
              return {
                op,
                right: {
                  type: 'expr_list',
                  value: [begin, end]
                }
              };
            },
        peg$c27 = function(nk) { return nk[0] + ' ' + nk[2]; },
        peg$c28 = function(op, right) {
              return { op, right: right };
            },
        peg$c29 = function(right) {
              return { op: 'IS', right };
            },
        peg$c30 = function(right) {
              return { op: 'IS NOT', right };
          },
        peg$c31 = "+",
        peg$c32 = peg$literalExpectation("+", false),
        peg$c33 = "-",
        peg$c34 = peg$literalExpectation("-", false),
        peg$c35 = "||",
        peg$c36 = peg$literalExpectation("||", false),
        peg$c37 = "*",
        peg$c38 = peg$literalExpectation("*", false),
        peg$c39 = "/",
        peg$c40 = peg$literalExpectation("/", false),
        peg$c41 = "%",
        peg$c42 = peg$literalExpectation("%", false),
        peg$c43 = function(e) {
              return { ...e, parentheses: true };
            },
        peg$c44 = function(list) {
                return { ...list, parentheses: true };
            },
        peg$c45 = function(tbl, col) {
              return {
                type: 'column_ref',
                table: tbl,
                column: col, location: location()
              };
            },
        peg$c46 = function(col) {
              return {
                type: 'column_ref',
                table: null,
                column: col, location: location()
              };
            },
        peg$c47 = function(head, tail) {
              return createList(head, tail);
            },
        peg$c48 = function(name) { return reservedMap[name.toUpperCase()] === true; },
        peg$c49 = function(name) {
              return name;
            },
        peg$c50 = "\"",
        peg$c51 = peg$literalExpectation("\"", false),
        peg$c52 = /^[^"]/,
        peg$c53 = peg$classExpectation(["\""], true, false),
        peg$c54 = function(chars) { return chars.join(''); },
        peg$c55 = "'",
        peg$c56 = peg$literalExpectation("'", false),
        peg$c57 = /^[^']/,
        peg$c58 = peg$classExpectation(["'"], true, false),
        peg$c59 = "`",
        peg$c60 = peg$literalExpectation("`", false),
        peg$c61 = /^[^`]/,
        peg$c62 = peg$classExpectation(["`"], true, false),
        peg$c63 = function(name) { return name; },
        peg$c64 = function(start, parts) { return start + parts.join(''); },
        peg$c65 = /^[A-Za-z_]/,
        peg$c66 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false),
        peg$c67 = /^[A-Za-z0-9_]/,
        peg$c68 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
        peg$c69 = /^[A-Za-z0-9_:]/,
        peg$c70 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", ":"], false, false),
        peg$c71 = function(name, l) {
              return { type: 'function', name, args: l ? l : { type: 'expr_list', value: [] }, location: location() };
            },
        peg$c72 = function(name) {
              return { type: 'function', name, args: { type: 'expr_list', value: [] }, location: location() };
            },
        peg$c73 = "sysdate",
        peg$c74 = peg$literalExpectation("SYSDATE", true),
        peg$c75 = peg$otherExpectation("CASE expression"),
        peg$c76 = function(expr, condition_list, otherwise) {
              if (otherwise) condition_list.push(otherwise);
              return {
                type: 'case',
                expr: expr || null,
                args: condition_list
              };
            },
        peg$c77 = function() {
              return { type: 'null', value: null };
            },
        peg$c78 = function() {
              return { type: 'bool', value: true };
            },
        peg$c79 = function() {
              return { type: 'bool', value: false };
            },
        peg$c80 = function(ca) {
              return {
                type: 'string',
                value: ca[1].join('')
              };
            },
        peg$c81 = /^[^'\\\0-\x1F\x7F]/,
        peg$c82 = peg$classExpectation(["'", "\\", ["\0", "\x1F"], "\x7F"], true, false),
        peg$c83 = "\\'",
        peg$c84 = peg$literalExpectation("\\'", false),
        peg$c85 = function() { return "'";  },
        peg$c86 = "\\\"",
        peg$c87 = peg$literalExpectation("\\\"", false),
        peg$c88 = function() { return '"';  },
        peg$c89 = "\\\\",
        peg$c90 = peg$literalExpectation("\\\\", false),
        peg$c91 = function() { return "\\"; },
        peg$c92 = "\\/",
        peg$c93 = peg$literalExpectation("\\/", false),
        peg$c94 = function() { return "/";  },
        peg$c95 = "\\b",
        peg$c96 = peg$literalExpectation("\\b", false),
        peg$c97 = function() { return "\b"; },
        peg$c98 = "\\f",
        peg$c99 = peg$literalExpectation("\\f", false),
        peg$c100 = function() { return "\f"; },
        peg$c101 = "\\n",
        peg$c102 = peg$literalExpectation("\\n", false),
        peg$c103 = function() { return "\n"; },
        peg$c104 = "\\r",
        peg$c105 = peg$literalExpectation("\\r", false),
        peg$c106 = function() { return "\r"; },
        peg$c107 = "\\t",
        peg$c108 = peg$literalExpectation("\\t", false),
        peg$c109 = function() { return "\t"; },
        peg$c110 = "''",
        peg$c111 = peg$literalExpectation("''", false),
        peg$c112 = function() { return "\'"; },
        peg$c113 = "\\u",
        peg$c114 = peg$literalExpectation("\\u", false),
        peg$c115 = function(h1, h2, h3, h4) {
              return String.fromCharCode(parseInt("0x" + h1 + h2 + h3 + h4));
            },
        peg$c116 = function(value) {
              return { type: 'number', value };
            },
        peg$c117 = function(int_, frac, exp) { return parseFloat(int_ + frac + exp); },
        peg$c118 = function(int_, frac) { return parseFloat(int_ + frac); },
        peg$c119 = function(int_, exp) { return parseFloat(int_ + exp); },
        peg$c120 = function(int_) { return parseFloat(int_); },
        peg$c121 = function(op, digits) { return op + digits; },
        peg$c122 = function(op, digit) { return op + digit; },
        peg$c123 = ".",
        peg$c124 = peg$literalExpectation(".", false),
        peg$c125 = function(digits) { return "." + digits; },
        peg$c126 = function(e, digits) { return e + digits; },
        peg$c127 = function(digits) { return digits.join(""); },
        peg$c128 = /^[0-9]/,
        peg$c129 = peg$classExpectation([["0", "9"]], false, false),
        peg$c130 = /^[0-9a-fA-F]/,
        peg$c131 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
        peg$c132 = /^[eE]/,
        peg$c133 = peg$classExpectation(["e", "E"], false, false),
        peg$c134 = /^[+\-]/,
        peg$c135 = peg$classExpectation(["+", "-"], false, false),
        peg$c136 = function(e, sign) { return e + (sign !== null ? sign: ''); },
        peg$c137 = "null",
        peg$c138 = peg$literalExpectation("NULL", true),
        peg$c139 = "true",
        peg$c140 = peg$literalExpectation("TRUE", true),
        peg$c141 = "false",
        peg$c142 = peg$literalExpectation("FALSE", true),
        peg$c143 = "between",
        peg$c144 = peg$literalExpectation("BETWEEN", true),
        peg$c145 = function() { return 'BETWEEN'; },
        peg$c146 = "in",
        peg$c147 = peg$literalExpectation("IN", true),
        peg$c148 = function() { return 'IN'; },
        peg$c149 = "is",
        peg$c150 = peg$literalExpectation("IS", true),
        peg$c151 = function() { return 'IS'; },
        peg$c152 = "like",
        peg$c153 = peg$literalExpectation("LIKE", true),
        peg$c154 = function() { return 'LIKE'; },
        peg$c155 = "not",
        peg$c156 = peg$literalExpectation("NOT", true),
        peg$c157 = function() { return 'NOT'; },
        peg$c158 = "and",
        peg$c159 = peg$literalExpectation("AND", true),
        peg$c160 = function() { return 'AND'; },
        peg$c161 = "or",
        peg$c162 = peg$literalExpectation("OR", true),
        peg$c163 = function() { return 'OR'; },
        peg$c164 = "case",
        peg$c165 = peg$literalExpectation("CASE", true),
        peg$c166 = "when",
        peg$c167 = peg$literalExpectation("WHEN", true),
        peg$c168 = "then",
        peg$c169 = peg$literalExpectation("THEN", true),
        peg$c170 = "else",
        peg$c171 = peg$literalExpectation("ELSE", true),
        peg$c172 = "end",
        peg$c173 = peg$literalExpectation("END", true),
        peg$c174 = ",",
        peg$c175 = peg$literalExpectation(",", false),
        peg$c176 = "(",
        peg$c177 = peg$literalExpectation("(", false),
        peg$c178 = ")",
        peg$c179 = peg$literalExpectation(")", false),
        peg$c180 = "/*",
        peg$c181 = peg$literalExpectation("/*", false),
        peg$c182 = "*/",
        peg$c183 = peg$literalExpectation("*/", false),
        peg$c184 = "--",
        peg$c185 = peg$literalExpectation("--", false),
        peg$c186 = peg$anyExpectation(),
        peg$c187 = /^[ \t\n\r]/,
        peg$c188 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
        peg$c189 = /^[\n\r]/,
        peg$c190 = peg$classExpectation(["\n", "\r"], false, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsewhere_clause();

      return s0;
    }

    function peg$parsewhere_clause() {
      var s0, s1, s2;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseexpr();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c0); }
      }

      return s0;
    }

    function peg$parseexpr_list() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseexpr();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseexpr();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseCOMMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseexpr();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecase_when_then() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parseKW_WHEN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseexpr();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseKW_THEN();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseexpr();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c3(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecase_else() {
      var s0, s1, s2, s3;
